--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "contributes": {
     "commands": [
       {
-        "command": "starcoderex.helloWorld",
-        "title": "Hello World"
+        "command": "starcoderex.ScanDoc",
+        "title": "Scan Doc"
+      },
+      {
+        "command": "starcoderex.ContinueDoc",
+        "title": "Continue Doc"
       }
     ]
   },
@@ -28,16 +32,20 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.78.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.78.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "@vscode/test-electron": "^2.3.0",
     "eslint": "^8.39.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^5.0.4",
-    "@vscode/test-electron": "^2.3.0"
+    "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@types/node-fetch": "^2.6.3",
+    "node-fetch": "^2.6.3"
   }
 }
