--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "starcoderex",
-  "displayName": "StarCoderEx",
+  "displayName": "StarCoderEx (AI Code generator)",
   "description": "Extension for using alternative GitHub Copilot (StarCoder API) in VSCode",
   "repository": "https://github.com/Lisoveliy/starcoderex",
   "icon": "logo.png",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "publisher": "Lisoveliy",
   "engines": {
     "vscode": "^1.78.0"
