--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "version": "0.9.54",
   "publisher": "Lisoveliy",
   "engines": {
-    "vscode": "^1.76.0"
+    "vscode": "^1.67.0"
   },
   "categories": [
-    "Other", "Formatters", "Machine Learning", "Programming Languages", "Snippets"
+    "Other",
+    "Formatters",
+    "Machine Learning",
+    "Programming Languages",
+    "Snippets"
   ],
   "activationEvents": [],
   "main": "./out/extension.js",
@@ -27,7 +31,7 @@
         "key": "ctrl+alt+p"
       }
     ],
-    "configuration":[
+    "configuration": [
       {
         "title": "StarCoderEx",
         "properties": {
@@ -55,7 +59,7 @@
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
-    "@types/vscode": "^1.78.0",
+    "@types/vscode": "^1.67.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "@vscode/test-electron": "^2.3.0",
