--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
       {
         "command": "starcoderex.ScanSel",
         "title": "Prompt selected code"
+      },
+      {
+        "command": "starcoderex.StartLifeTime",
+        "title": "Start lifetime generating requests"
       }
     ],
     "keybindings": [
