--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Extension for using alternative GitHub Copilot (StarCoder API) in VSCode",
   "repository": "https://github.com/Lisoveliy/starcoderex",
   "icon": "logo.png",
-  "version": "1.0.31",
+  "version": "1.0.4",
   "publisher": "Lisoveliy",
   "engines": {
     "vscode": "^1.67.0"
@@ -65,6 +65,10 @@
           "starcoderex.bearertoken": {
             "type": "string",
             "default": ""
+          },
+          "starcoderex.apiurl":{
+            "type": "string",
+            "default": "https://api-inference.huggingface.co/models/bigcode/starcoder"
           }
         }
       }
